# lcdata

./: .gitignore  config.csv  config.json  main.py  pyproject.toml
.github/workflows/: build.yml
src/lcdata/: cli.py  error.py  file.py  main.py  objects.py  process.py  util.py
test/: A_A1_raw.csv  A_A1_subtracted.csv  A_A2_raw.csv  A_A2_subtracted.csv
