[project]
name = "Text_file_converter"
version = "1.0.0"
description = "Speed up Atom's work flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "typer>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.7",
]

[project.scripts]
lcdata = "lcdata.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lcdata"]   
